[gd_scene load_steps=7 format=3 uid="uid://x144x8cw7h08"]

[ext_resource type="Script" path="res://script/controllers/game_controller.gd" id="1_marxr"]
[ext_resource type="Resource" uid="uid://c0teplyomool1" path="res://resources/quimica/theme/tabela.tres" id="2_2njhk"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_prqgh"]
load_path = "res://.godot/imported/botao_normal.png-9bafeabb1a7125b02b956815c7dbc416.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2nxsb"]
load_path = "res://.godot/imported/botao_normal.png-9bafeabb1a7125b02b956815c7dbc416.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gsub8"]
load_path = "res://.godot/imported/botao_normal.png-9bafeabb1a7125b02b956815c7dbc416.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ogep7"]
load_path = "res://.godot/imported/botao_normal.png-9bafeabb1a7125b02b956815c7dbc416.ctex"

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_marxr")
quiz = ExtResource("2_2njhk")
color_right = Color(0, 0.978861, 0.61654, 1)
color_wrong = Color(1, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 321.0
offset_bottom = 179.0
color = Color(0.521569, 0.65098, 0.717647, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = -51.0
offset_bottom = 171.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 15
text = "pergunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -165.0
offset_right = 155.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button1" type="Button" parent="Control/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
icon = SubResource("CompressedTexture2D_prqgh")
icon_alignment = 1

[node name="Button2" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
icon = SubResource("CompressedTexture2D_2nxsb")
icon_alignment = 1

[node name="Button3" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
icon = SubResource("CompressedTexture2D_gsub8")
icon_alignment = 1

[node name="Button4" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 10
icon = SubResource("CompressedTexture2D_ogep7")
icon_alignment = 1

[node name="GameOver" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0.52867, 0.528669, 0.528669, 1)

[node name="Title" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 20.0
offset_right = 56.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Voce Acertou:"

[node name="Score" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "0/0"

[node name="Restart" type="Button" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -57.0
offset_right = 98.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "Jogar novamente"

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="."]

[node name="AudioErro" type="AudioListener2D" parent="."]

[connection signal="pressed" from="Control/GameOver/Restart" to="." method="_on_restart_pressed"]
